2002-12-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapeio.c (do_read): Init count to 0.

2002-12-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/Makefile.am: Install tapetype program as amtapetype.
	* docs/TAPETYPES: Change for amtapetype.
	* man/amtapetype.8.in: New man page
	* man/Makefile.am: Install it.
	* configure.in (AC_CONFIG_FILES): Add man/amtapetype.8.

2002-12-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/ammt.c (optind): Add prototype.
	* tape-src/amdd.c (optind): Add prototype.

2002-12-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/arglist.h (printf_arglist_function,
	  printf_arglist_function1, printf_arglist_function2): Define if
	  STDC_HEADERS is not defined.

2002-12-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: New --date option to display datestamp.
	* server-src/amstatus.pl.in: Increase some field size.
	* server-src/amstatus.pl.in: The host field adjust it's length to the
	 largest.

2002-11-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amanda.h (days_diff): Don't add a half day.
	* server-src/amadmin.c: Fix for newer days_diff.
	* server-src/planner.c: Fix for newer days_diff.

2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* tape-src/tapetype.c: Cast time_t to long for printing.

2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: Write a "amflush: start at ???" line.
	* server-src/amstatus.pl.in: parse the "amflush: start at ???" line.

2002-11-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (delay_dumps): Use ap_snprintf.

2002-11-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/debug.c: Most of the code must in #ifdef DEBUG_CODE.
	* client-src/client_util.c: Use AMANDA_TMPDIR instead of AMANDA_DBGDIR.

2002-11-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
